--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,31 @@ Package: compendium
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.1
 Authors@R: 
-    person(given = "Ben",
-           family = "Marwick",
-           role = c("aut", "cre"),
-           email = "benmarwick@gmail.com",
-           comment = c(ORCID = "0000-0001-7879-4531"))
+    person(given="Maggie",
+            family="Weatherly",
+            role=c("aut","cre"),
+            email="mweath@uw.edu"
+            comment=c(ORCID="0000-0003-3682-8216")),
+    person(given="Matthew",
+            family="Rhodes",
+            role=c("aut","cre"),
+            email="mrr313@uw.edu"
+            comment=c(ORCID="0000-0002-4400-7111")),
+    person(given="Juan",
+            family="Solorio",
+            role=c("aut","cre"),
+            email="juansolo@uw.edu"
+            comment=c(ORCID="0000-0003-3833-9459")),
+    person(given="Andy",
+            family="De La Fuente",
+            role=c("aut","cre"),
+            email="andy0@uw.edu"
+            comment=c(ORCID="0000-0003-4148-8690")),
+    person(given="Anmol",
+            family="Srivastava",
+            role=c("aut","cre"),
+            email="anmols@uw.edu"
+            comment=c(ORCID="0000-0002-9553-3904")),
 Description: Compendium description
 License: MIT + file LICENSE
 Depends: 
