--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,13 +38,13 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 Imports:  
-    ggpubr,
-    dplyr,
-    ggplot2,
-    here,
-    knitr,
-    rmarkdown,
-    tidyverse
+    ggpubr (>= 0.2.5),
+    dplyr (>= 0.8.4),
+    ggplot2 (>= 3.3.0),
+    here (>= 0.1.0),
+    knitr (>= 3.28.0),
+    rmarkdown (>= 2.1.0),
+    tidyverse (>= 1.3.0)
 Suggests: 
     devtools,
     git2r
